fixed bugs https://trello.com/c/ooAOtBoR/154-ultima14png https://trello.com/c/EIw4PxLI/186-ultima-201707263png https://trello.com/c/rYmTEW7U/183-align-the-button https://trello.com/c/MCmHQqTJ/180-incorrect-placement-of-elements

--- a/app/content/css/main.css
+++ b/app/content/css/main.css
@@ -2287,9 +2287,6 @@ textarea {
     width: 34%;
     margin-right: 0;
 }
-.b-form__input.ablehnungsgrund {
-    width: 12%;
-}
 .smaller-date {
     width: 31%;
     display: flex;
@@ -2304,9 +2301,10 @@ textarea {
 .third_form .b-form__list-view::before {
     left: 50%;
 }
-.antrag-container .antrag-first .b-form__input{
-    margin-right: 3px;
+.antrag-first .firstAreaDelete label{
+    margin-bottom: 4px;
 }
+
 .antrag-container .antrag-first span:nth-of-type(1),
 .antrag-container .antrag-first span:nth-of-type(3){
     width: 12%;
@@ -2314,6 +2312,8 @@ textarea {
 .b-form__input.comments {
     padding-bottom: 0;
     vertical-align: top;
+    width: 100px;
+    display: none;
 }
 .b-form__input.ablehnungsgrund select{
     padding: 0;
@@ -2323,8 +2323,8 @@ textarea {
     padding: 0;
 /*<<<<<<< HEAD*/
 }
-.antrag-container .antrag-first span:nth-of-type(7){
-    margin-right: 6px;
+.antrag-container .antrag-first span:nth-of-type(9){
+    margin-left: 30px;
 }
 #anzahl {
     width: 30%;
@@ -2362,4 +2362,11 @@ textarea {
     width: 85px!important;
     margin: 0;
     text-align: right;
+}
+.no-float .b-form__input:last-child {
+    vertical-align: bottom;
+}
+.no-float .b-form__input:last-child button{
+    height: 20px!important;
+    padding: 2px 8px;
 }
